# proxima_coloniae

./: Cargo.toml  README.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: GalaxyVisualisation.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Account.jsx  Home.jsx
src/: galaxy_calculator.rs  galaxy_generator.rs  jwt.rs  main.rs
src/handlers/: auth.rs  galaxy.rs
src/models/: galaxy.rs  mod.rs  user.rs
src/services/: galaxy.rs  mod.rs
static/: account.html  index.html
