[package]
name = "proxima_coloniae"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
bcrypt = "0.13"
jsonwebtoken = "8.3"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"